# ezra

./: .cursorrules  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  REFACTOR.md  RELEASE_NOTES.md  SECURITY.md  pr_body.txt  pr_body_m03.txt  pr_body_m04.txt  pr_body_m05.txt  pr_body_m06.txt  pr_body_m07.txt  pr_body_m10.txt  pr_body_m11.txt  pr_body_m14.txt  pr_body_m17.txt  pr_body_m19.txt  pr_body_m27.txt  pyproject.toml  requirements-dev.in  requirements.txt
.github/workflows/: ci.yml  release.yml
determinism_output/: determinism_report.json
determinism_output/bundle_run_1/: detections.json  hashes.json  state.json
determinism_output/bundle_run_3/: manifest.json
docs/: CI_ARCHITECTURE.md  M31fullaudit.md  M33fullaudit.md  VISION.md  conf.py  ezra.md  index.rst  phase_v_completion_declaration.md  qa.md  qa.rst
docs/architecture/: zones.md
docs/baselines/: public_surface_snapshot.json  zone_registry_snapshot.json  zone_schema_snapshot.json
docs/certification/: README.md
docs/milestones/M00/: M00_audit.md  M00_plan.md  M00_run1.md  M00_run2.md  M00_run3.md  M00_summary.md  M00_toolcalls.md
docs/milestones/M01/: M01_audit.md  M01_plan.md  M01_run1.md  M01_summary.md  M01_toolcalls.md
docs/milestones/M02/: M02_audit.md  M02_plan.md  M02_run1.md  M02_summary.md  M02_toolcalls.md
docs/milestones/M03/: M03_audit.md  M03_plan.md  M03_run1.md  M03_summary.md  M03_toolcalls.md
docs/milestones/M04/: M04_audit.md  M04_plan.md  M04_run1.md  M04_summary.md  M04_toolcalls.md
docs/milestones/M05/: M05_audit.md  M05_plan.md  M05_run1.md  M05_summary.md  M05_toolcalls.md
docs/milestones/M06/: M06_audit.md  M06_plan.md  M06_run1.md  M06_summary.md  M06_toolcalls.md
docs/milestones/M07/: M07_audit.md  M07_plan.md  M07_run1.md  M07_summary.md  M07_toolcalls.md
docs/milestones/M08/: M08_audit.md  M08_plan.md  M08_run1.md  M08_summary.md  M08_toolcalls.md
docs/milestones/M09/: M09_audit.md  M09_plan.md  M09_run1.md  M09_run2.md  M09_run3.md  M09_summary.md  M09_toolcalls.md
docs/milestones/M10/: M10_audit.md  M10_plan.md  M10_run1.md  M10_summary.md  M10_toolcalls.md
docs/milestones/M11/: M11_audit.md  M11_plan.md  M11_run1.md  M11_summary.md  M11_toolcalls.md
docs/milestones/M12/: M12_audit.md  M12_plan.md  M12_run1.md  M12_summary.md  M12_toolcalls.md
docs/milestones/M13/: M13_audit.md  M13_plan.md  M13_run1.md  M13_summary.md  M13_toolcalls.md
docs/milestones/M14/: M14_audit.md  M14_plan.md  M14_run1.md  M14_summary.md  M14_toolcalls.md
docs/milestones/M15/: M15_audit.md  M15_plan.md  M15_run1.md  M15_run2.md  M15_run3.md  M15_summary.md  M15_toolcalls.md
docs/milestones/M16/: M16_audit.md  M16_plan.md  M16_run1.md  M16_run2.md  (+3 more)
docs/release/: AUDIT_RECONCILIATION_M33_M35.md  DISTRIBUTION_VERIFICATION.md  PUBLIC_RELEASE_CHECKLIST.md  PYPI_TRUSTED_PUBLISHING.md
scripts/: check_determinism.py  generate_determinism_summary.py  verify_distribution.py
src/ezra/: __init__.py  errors.py  types.py
tests/: __init__.py  test_baseline_schema.py  test_canonicalize.py  test_distribution_verification.py  test_easyocr_adapter.py  test_easyocr_plugin.py  test_epb_builder.py  test_epb_canonical.py  test_epb_emission.py  test_epb_hash_verification.py  test_epb_hashing.py  test_epb_schema_validation.py  test_epb_zones.py  test_errors.py  test_ezra_version_manifest.py  test_parity.py  test_parity_unit.py  test_plugin_registry.py  test_public_release_boundary.py  test_public_surface_freeze.py  test_runtime_immutability.py  test_smoke.py  test_zone_architecture.py  test_zone_contract.py  test_zone_export.py  test_zone_projector.py  test_zone_registry.py  test_zone_registry_integrity.py  test_zone_registry_snapshot.py  test_zone_schema.py  test_zone_schema_diff.py  test_zone_schema_version_enforcement.py  test_zone_validator.py
tests/contracts/: __init__.py  test_epb_artifact_signing.py  test_epb_cert_metadata.py  test_epb_consumer_certification.py  test_epb_contract.py  test_epb_tools_import_surface.py  test_epb_zone_snapshot.py  test_zone_channel_mapping.py  test_zone_projection_snapshot.py  test_zone_schema_roundtrip.py  test_zone_schema_snapshot.py
tests/utils/: ml_available.py
(+200 files in other folders)
