[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezra"
version = "0.0.1.dev0"
description = "Extensible Zone-Based Runtime Architecture - Modular perception engine"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "EZRA Contributors"}
]
dependencies = [
    "jsonschema>=4.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.3.0",
    "pillow>=10.0.0",
    "radon>=6.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "cyclonedx-py>=1.0.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.5.0",
    "pip-tools>=7.4.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
easyocr = [
    "easyocr==1.7.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "easyocr.*",
    "numpy.*",
    "torch.*",
    "torchvision.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "parity: marks tests as parity verification tests (requires EZRA_RUN_PARITY=1)",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/tools/*",  # CLI tools are not library code
]

[tool.coverage.report]
fail_under = 85
precision = 2
show_missing = true
skip_covered = false

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"
match-dir = "(?!tests|test_).*"
add-ignore = [
    "D100",  # Missing docstring in public module (allow for __init__.py)
    "D104",  # Missing docstring in public package (allow for __init__.py)
]

